changed usage of $config['lua'] to configLua();

--- a/system/templates/account.create_character.html.twig
+++ b/system/templates/account.create_character.html.twig
@@ -184,7 +184,7 @@ In any case the name must not violate the naming conventions stated in the <a hr
                                 <tbody>
                                 <tr>
                                   <td style="border: 0">
-                                    <div class="row">
+                                    <div class="d-flex row">
                                       {% set y = 0 %}
                                       {% for type in world_types %}
                                         {% set y = y + 1 %}
