--- a/tools/css/custom.css
+++ b/tools/css/custom.css
@@ -894,3 +894,15 @@
 .text-nowrap {
   white-space: nowrap !important;
 }
+
+.stronger {
+  font-weight: bold !important;
+}
+
+.text-green {
+  color: #00a65a !important
+}
+
+.text-red {
+  color: #dd4b39 !important
+}
