--- a/system/templates/online.html.twig
+++ b/system/templates/online.html.twig
@@ -101,8 +101,8 @@
                       <td width="25%" class="LabelV150">Status:</td>
                       <td>
                         {{ world.name }} World is {% if status.online %}<strong
-                          class="text-green">Online</strong>{% else %} <strong
-                          class="text-red">Offline</strong>{% endif %}
+                          class="green">Online</strong>{% else %} <strong
+                          class="red">Offline</strong>{% endif %}
                       </td>
                     </tr>
                     {% if status.online %}
