--- a/system/templates/serverinfo.html.twig
+++ b/system/templates/serverinfo.html.twig
@@ -123,7 +123,7 @@
                             <table class="TableContent" width="100%">
                               <tbody>
                               <tr bgcolor="#D4C0A1">
-                                <td><b>IP:</b> {{ serverIp }} (Port: {{ config.lua.loginPort }})</td>
+                                <td><b>IP:</b> {{ serverIp }} (Port: {{ config.lua.loginProtocolPort }})</td>
                               </tr>
                               <tr bgcolor="#F1E0C6">
                                 <td><b>Client: </b> {{ clientVersion }}</td>
